Tweak to ensure Hero full height on mobile

--- a/src/components/layout/Header/HeroGrid/HeroGrid.module.scss
+++ b/src/components/layout/Header/HeroGrid/HeroGrid.module.scss
@@ -12,7 +12,7 @@
   z-index: -1;
 }
 
-.bgWrap > img {
+.bgWrap > div {
   height: 100vh;
 }
 
